get session list detail bug fix

--- a/Web.config
+++ b/Web.config
@@ -26,7 +26,7 @@
     <add key="MAX_SESSION_USER" value="10" />
     
     <!--dev env-->
-    <add key="ENV" value="develop"/>
+    <!--<add key="ENV" value="develop"/>
     <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8091" />
@@ -44,10 +44,10 @@
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="qdaan" />
+    <add key="QiniuBucket" value="qdaan" />-->
     
     <!--pro env-->
-    <!--<add key="ENV" value="production"/>
+    <add key="ENV" value="production"/>
     <add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.uwenda.com/POIWebService_release/contentServer/" />
     <add key="ProxyServerIP" value="112.124.14.229:8091" />
@@ -65,7 +65,7 @@
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="puvsa" />-->
+    <add key="QiniuBucket" value="puvsa" />
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
