redis time out send email

--- a/Web.config
+++ b/Web.config
@@ -26,7 +26,7 @@
     <add key="MAX_SESSION_USER" value="10" />
     
     <!--dev env-->
-    <!--<add key="ENV" value="develop"/>
+    <add key="ENV" value="develop"/>
     <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8091" />
@@ -40,14 +40,15 @@
     <add key="RedisHost" value="115.29.207.236"/>
     <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="adminServer" value="http://www.cuvsa.org/api/admin/monitor_log" />
     <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="qdaan" />-->
+    <add key="QiniuBucket" value="qdaan" />
     
     <!--pro env-->
-    <add key="ENV" value="production"/>
+    <!--<add key="ENV" value="production"/>
     <add key="DNSServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.uwenda.com/POIWebService_release/contentServer/" />
     <add key="ProxyServerIP" value="112.124.14.229:8091" />
@@ -61,11 +62,12 @@
     <add key="RedisHost" value="115.29.8.28"/>
     <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/weixinApi.php" />
+    <add key="adminServer" value="http://www.puvsa.org/api/admin/monitor_log" />
     <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
-    <add key="QiniuBucket" value="puvsa" />
+    <add key="QiniuBucket" value="puvsa" />-->
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
@@ -78,6 +80,7 @@
     <add key="DbUsername" value="poi" />
     <add key="DbPassword" value="public11223" />
     <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="adminServer" value="http://www.cuvsa.org/api/admin/monitor_log" />
     <add key="ParseAppId" value="g7VjP9s5MSVTxPyOFRsT0VQlImUPmcUVHqblEVE1" />
     <add key="ParseAppKey" value="9TvhcnKWoMFHaVDVvIqhndHhICiQeQkfKWUzwPFe" />
     <add key="QiniuBucket" value="puvsa" />-->
