sync when delete session and push to new weixin server

--- a/Web.config
+++ b/Web.config
@@ -40,6 +40,7 @@
     <add key="RedisHost" value="115.29.207.236"/>
     <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="EduServer" value="http://www.qdaan.com/POIWebService_edu/dnsServer/weixinApi.php" />
     <add key="adminServer" value="http://www.cuvsa.org/api/admin/monitor_log" />
     <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
@@ -62,6 +63,7 @@
     <add key="RedisHost" value="115.29.8.28"/>
     <add key="RedisPort" value="6379" />
     <add key="WxServer" value="http://www.uwenda.com/POIWebService_release/dnsServer/weixinApi.php" />
+    <add key="EduServer" value="http://www.uwenda.com/POIWebService_changshaEdu/dnsServer/weixinApi.php" />
     <add key="adminServer" value="http://www.puvsa.org/api/admin/monitor_log" />
     <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
     <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
