--- a/Web.config
+++ b/Web.config
@@ -31,8 +31,8 @@
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
     <add key="ProxyServerIP" value="218.244.132.113:8091" />
     <add key="ProxyServerPort" value="81" />
-    <add key="ProxyPort" value="8091" />
-    <add key="ProxyHost" value="http://218.244.132.113" />
+    <add key="ProxyPort" value="80" />
+    <add key="ProxyHost" value="http://proxy.cuvsa.org" />
     <add key="DbHost" value="115.29.207.236" />
     <add key="DbName" value="uwenda" />
     <add key="DbUsername" value="poi" />
@@ -70,6 +70,52 @@
     <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
     <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
     <add key="QiniuBucket" value="puvsa" />-->
+
+    <!--dev 8092 env-->
+    <!--<add key="ENV" value="develop"/>
+    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
+    <add key="ProxyServerIP" value="218.244.132.113:8092" />
+    <add key="ProxyServerPort" value="81" />
+    <add key="ProxyPort" value="8092" />
+    <add key="ProxyHost" value="http://218.244.132.113" />
+    <add key="DbHost" value="115.29.207.236" />
+    <add key="DbName" value="uwenda" />
+    <add key="DbUsername" value="poi" />
+    <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="115.29.207.236"/>
+    <add key="RedisPort" value="6379" />
+    <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="EduServer" value="http://www.qdaan.com/POIWebService_edu/dnsServer/weixinApi.php" />
+    <add key="adminServer" value="http://www.cuvsa.org/api/admin/monitor_log" />
+    <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
+    <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
+    <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
+    <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
+    <add key="QiniuBucket" value="qdaan" />-->
+
+    <!--dev 8093 env-->
+    <!--<add key="ENV" value="develop"/>
+    <add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
+    <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
+    <add key="ProxyServerIP" value="218.244.132.113:8093" />
+    <add key="ProxyServerPort" value="81" />
+    <add key="ProxyPort" value="8093" />
+    <add key="ProxyHost" value="http://218.244.132.113" />
+    <add key="DbHost" value="115.29.207.236" />
+    <add key="DbName" value="uwenda" />
+    <add key="DbUsername" value="poi" />
+    <add key="DbPassword" value="public11223" />
+    <add key="RedisHost" value="115.29.207.236"/>
+    <add key="RedisPort" value="6379" />
+    <add key="WxServer" value="http://www.qdaan.com/POIWebService/dnsServer/weixinApi.php" />
+    <add key="EduServer" value="http://www.qdaan.com/POIWebService_edu/dnsServer/weixinApi.php" />
+    <add key="adminServer" value="http://www.cuvsa.org/api/admin/monitor_log" />
+    <add key="getuiAppId" value="g5NzYPihq79hDqeEniKdB4"/>
+    <add key="getuiAppKey" value="14fWxOQdCG6wxzXPGqTwA6"/>
+    <add key="getuiMasterSecret" value="6X52s1s6KiAlySbI7STBn9"/>
+    <add key="getuiHost" value="http://sdk.open.api.igexin.com/apiex.htm"/>
+    <add key="QiniuBucket" value="qdaan" />-->
     
     <!--<add key="DNSServer" value="http://www.qdaan.com/POIWebService/dnsServer/interface.php" />
     <add key="ContentServer" value="http://www.qdaan.com/POIWebService/contentServer/" />
